--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <!--build:css-->
+    <link rel="stylesheet" href="css/styles.css">
+    <!--endbuild-->
+  </head>
   <body>
     <div id="app"></div>
 
